--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,6 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.1",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "@tailwindcss/postcss7-compat": "^2.2.7"
   }
 }
