--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,10 @@
   "private": true,
   "proxy": "http://localhost:8888",
   "dependencies": {
-    "@craco/craco": "^6.4.2",
-    "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "daisyui": "^1.16.2",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,9 +20,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,10 +44,7 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.8",
     "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-styled-components": "^2.0.1",
-    "postcss": "^7.0.39",
-    "@tailwindcss/postcss7-compat": "^2.2.7"
+    "babel-plugin-styled-components": "^2.0.1"
   }
 }
